--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <p class="name">Achint Tyagi</p>
                 <hr class="nameUnderline" />
                 <h2 class="objective">
-                    Proficient in HTML5, CSS, Bootstrap, JavaScript and php. I have an eye
-                    for design, creativity, and possess problem-solving skills,
-                    adaptability, and learning agility.
+                    Proficient in HTML, CSS, JavaScript, PHP, React, and Flutter, I am a front-end developer with a keen
+                    eye for design and creativity. I excel in problem-solving, adaptability, and continuous learning,
+                    with a strong focus on delivering user-friendly, responsive web solutions.
                 </h2>
                 <div class="socialLogo">
                     <a href="https://www.linkedin.com/in/achint-tyagi/" target="_blank"><img
@@ -162,21 +162,17 @@
 
                         <p class="heading">What I can do?</p>
                         <h5>
-                            I am a Front-end web developer, who can design beautiful and attractive website
-                            with
-                            HTML, CSS,
-                            JavaScript, with decent knowledge of color for making Websites Templates.
-                            <br>
-                            <br>
-                            I also have decent knowledge of php and basic knowledge of SQL with which I can
-                            build a full stack website for you.
+                            As a front-end web developer, I can create aesthetically pleasing and responsive websites
+                            using HTML, CSS, JavaScript, and Bootstrap. I also have knowledge of PHP and SQL, enabling
+                            me to develop full-stack applications. My experience in WordPress, Webflow, React, and
+                            Flutter allows me to build dynamic, mobile-first, and scalable web and mobile applications.
                         </h5>
                         <p class="heading"> What am I doing currently?</p>
                         <h5>
-                            Currently pursuing my Masters in Computer Application and learning new
-                            programming
-                            languages like Python, ReactJS, MySQL, PHP and seeking role as Front-end
-                            developer or Full stack web developer.
+                            I am currently working as a Frontend Engineer, learning new technologies like ReactJS,
+                            Flutter, and MySQL, while expanding my knowledge of back-end development. Actively seeking
+                            opportunities as a front-end or
+                            full-stack developer.
                         </h5>
 
                         <img src="Assets/Images/hire.png" width="37px">
@@ -194,7 +190,7 @@
                             <h3>Frontend Intern</h3>
                             <h4>Varp Techlabs</h4>
                         </div>
-                        <h4>JAN 2024-JUN 2024</h4>
+                        <h4>JAN 2024 - JUN 2024</h4>
                         <p>I developed responsive web pages using Webflow and enhanced my React skills by working on
                             dynamic web applications. This experience boosted my technical abilities and adaptability.
                         </p>
@@ -204,7 +200,7 @@
                             <h3>Web Developer Intern</h3>
                             <h4>OctaNet</h4>
                         </div>
-                        <h4>JUN 2023-JUL 2023</h4>
+                        <h4>JUN 2023 - JUL 2023</h4>
                         <p>Successfully developed a webpage with features for creating, editing, and
                             organizing digital notes and analyzed and cloned a website.
                         </p>
@@ -214,7 +210,7 @@
                             <h3>WordPress Developer</h3>
                             <h4>Dharohar</h4>
                         </div>
-                        <h4>JUN 2021-Aug 2021</h4>
+                        <h4>JUN 2021 - Aug 2021</h4>
                         <p>Designed and developed a fully functional WordPress website, including custom
                             themes,
                             plugins, and responsive design. Also created a visually appealing logo that
@@ -232,13 +228,34 @@
 
                         <div class="skill">
                             <div class="skill-name">
+                                <img src="Assets/Images/reactjs.svg">
+                                <h5>ReactJS</h5>
+                            </div>
+                            <!-- <div class="skill-progress">
+                                <span class="progres" data-value="55%" style="width: 55%;"></span>
+                            </div>
+                            <span class="value">55%</span> -->
+                        </div>
+
+                        <div class="skill">
+                            <div class="skill-name">
+                                <img src="Assets/Images/flutter.svg">
+                                <h5>Flutter</h5>
+                            </div>
+                            <!-- <div class="skill-progress">
+                                <span class="progres" data-value="40%" style="width: 40%;"></span>
+                            </div>
+                            <span class="value">40%</span> -->
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">
                                 <img src="Assets/Images/python.svg">
                                 <h5>Python</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="55%" style="width: 55%;"></span>
                             </div>
-                            <span class="value">55%</span>
+                            <span class="value">55%</span> -->
                         </div>
 
 
@@ -247,10 +264,10 @@
                                 <img src="Assets/Images/javascript.svg">
                                 <h5>JavaScript</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="75%" style="width: 75%;"></span>
                             </div>
-                            <span class="value">75%</span>
+                            <span class="value">75%</span> -->
                         </div>
 
 
@@ -259,10 +276,10 @@
                                 <img src="Assets/Images/php.svg">
                                 <h5>PhP</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="50%" style="width: 50%;"></span>
                             </div>
-                            <span class="value">50%</span>
+                            <span class="value">50%</span> -->
                         </div>
 
 
@@ -271,10 +288,10 @@
                                 <img src="Assets/Images/html5.svg">
                                 <h5>HTML</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="95%" style="width: 95%;"></span>
                             </div>
-                            <span class="value">95%</span>
+                            <span class="value">95%</span> -->
                         </div>
 
 
@@ -283,10 +300,10 @@
                                 <img src="Assets/Images/css.svg">
                                 <h5>CSS</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="90%" style="width: 90%;"></span>
                             </div>
-                            <span class="value">90%</span>
+                            <span class="value">90%</span> -->
                         </div>
 
 
@@ -295,10 +312,10 @@
                                 <img src="Assets/Images/bootstrap.svg">
                                 <h5>Bootstrap</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="85%" style="width: 85%;"></span>
                             </div>
-                            <span class="value">85%</span>
+                            <span class="value">85%</span> -->
                         </div>
 
 
@@ -307,10 +324,10 @@
                                 <img src="Assets/Images/typescriptlang.svg">
                                 <h5>Typescript</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="35%" style="width: 35%;"></span>
                             </div>
-                            <span class="value">35%</span>
+                            <span class="value">35%</span> -->
                         </div>
 
                         <div class="skill">
@@ -318,32 +335,23 @@
                                 <img src="Assets/Images/wordpress.svg">
                                 <h5>WordPress</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="50%" style="width: 50%;"></span>
                             </div>
-                            <span class="value">50%</span>
+                            <span class="value">50%</span> -->
                         </div>
 
-                        <div class="skill">
-                            <div class="skill-name">
-                                <img src="Assets/Images/reactjs.svg">
-                                <h5>ReactJS</h5>
-                            </div>
-                            <div class="skill-progress">
-                                <span class="progres" data-value="55%" style="width: 55%;"></span>
-                            </div>
-                            <span class="value">55%</span>
-                        </div>
+
 
                         <div class="skill">
                             <div class="skill-name">
                                 <img src="Assets/Images/webflow.svg">
                                 <h5>Webflow</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="45%" style="width: 45%;"></span>
                             </div>
-                            <span class="value">45%</span>
+                            <span class="value">45%</span> -->
                         </div>
 
                         <div class="skill">
@@ -351,10 +359,10 @@
                                 <img src="Assets/Images/java.svg">
                                 <h5>Java</h5>
                             </div>
-                            <div class="skill-progress">
+                            <!-- <div class="skill-progress">
                                 <span class="progres" data-value="40%" style="width: 40%;"></span>
                             </div>
-                            <span class="value">40%</span>
+                            <span class="value">40%</span> -->
                         </div>
 
                     </div>
@@ -365,12 +373,12 @@
                     <hr class="textUnderline">
                     <li class="eduItem">
                         <h3>Master of Computer Application</h3>
-                        <h4>2022 — 2024</h4>
+                        <h4>2022 - 2024</h4>
                         <h3>MIT World Peace University Pune</h3>
                     </li>
                     <li class="eduItem">
                         <h3>Bachelor of Computer Application</h3>
-                        <h4>(2019-2022)</h4>
+                        <h4>2019 - 2022</h4>
                         <h3>Chaudhary Charan Singh University Meerut</h3>
 
                     </li>
@@ -445,6 +453,17 @@
                 <hr class="textUnderline" />
                 <div class="container">
                     <ul class="cards">
+                        <li class="card">
+                            <div class="cardImg" style="background-image: url(Assets/Images/Flutter-Udemy.jpg)">
+                            </div>
+                            <div class="card-content">
+                                <h3>Udemy</h3>
+                                <p>Flutter</p>
+                                <a target="_blank" href="Assets/Certificates/Flutter-Udemy.pdf"
+                                    class="card-link">View</a>
+                            </div>
+                        </li>
+
                         <li class="card">
                             <div class="cardImg" style="background-image: url(Assets/Images/React-Udemy.jpg)">
                             </div>
