--- a/index.html
+++ b/index.html
@@ -928,5 +928,5 @@
     });
   </script>
 
-  <script src="./Assets/JS/script.js"></script>
+  <script src="./Assets/JS/Script.js"></script>
 </html>
