--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
 
   <body>
+    <div id="loading-screen">
+      <div class="spinner"></div>
+    </div>
     <div id="Background-Effect"></div>
 
     <nav>
