--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="expItem">
                   <div>
                     <h3>Frontend Engineer</h3>
-                    <h4>Intelera Tech</h4>
+                    <h4>Varp Techlabs</h4>
                   </div>
                   <h4>JUL 2024 - Present</h4>
                   <p>
